--- a/newsite.html
+++ b/newsite.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Navbar</title>
+  <title>Responsive Navbar</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -101,7 +101,7 @@
 </head>
 <body>
   <nav>
-    <img src="https://img.icons8.com/ios-filled/50/000000/bolt--v1.png" alt="Logo Icon" class="logo" />
+    <img src="4809f630-aa31-4bd5-aa0d-af8d0170b8a0.png" alt="Logo Icon" class="logo" />
     <div class="nav-links">
       <a href="#services">Services</a>
       <a href="#pricing">Pricing</a>
