--- a/newsite.html
+++ b/newsite.html
@@ -101,7 +101,7 @@
 </head>
 <body>
   <nav>
-    <img src="4809f630-aa31-4bd5-aa0d-af8d0170b8a0.png" alt="Logo Icon" class="logo" />
+    <img src="logo.png" alt="Logo Icon" class="logo" />
     <div class="nav-links">
       <a href="#services">Services</a>
       <a href="#pricing">Pricing</a>
